[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_shkedia_models"
version = "0.4.0"
authors = [
  { name="Oz Shaked", email="oz.rnds@gmail.com" },
]
description = "The project shkedia models package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Developers for Project Shkedia",
    "Topic :: Data Structure :: API",
    # Pick your license as you wish
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by 'pip install'. See instead 'python_requires' below.
    "Programming Language :: Python :: 3.11",
]
dependencies = ['pydantic>=2.5.2']

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version = "0.4.0"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml"
]
